# BearMundo

./: .cursorignore  .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle
.cursor/: mcp.json
.cursor/rules/: bearsecurity-aar-library.mdc  code-organization.mdc  git-operations.mdc  keyauth-integration.mdc  performance.mdc  project-construction.mdc  security.mdc  workflow.mdc
android/: README.md  REMOTE_LOGGING.md  config.js  run-frida.ps1  run-frida.sh  setup_frida.ps1  setup_frida.sh
android/scripts/: README.md  main.js
android/scripts/analysis/: README.md  app_analyzer.js
android/scripts/bypass/: README.md  root_bypass.js  signature_bypass.js  ssl_bypass.js
android/scripts/examples/: README.md  remote_logging_example.js  telegram_logging.js
android/scripts/utils/: README.md  common.js  remote_logging.js  web_ui.js
app/: build.gradle.kts  proguard-rules.pro
app/proguard/: bearmundo-security.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/assets/frida-scripts/: bearmod_analyzer.js
app/src/main/cpp/: BearMundoJNI.cpp  CMakeLists.txt  Offsets.h  Vector3.h  my_lib.cpp  native-lib.cpp
app/src/main/cpp/Helper/: BuildFixes.h  Functions.cpp  Functions.h  NDKCompatibility.h  pch.h
app/src/main/cpp/cmake/: CheckNDKVersion.cmake  FindSDKDependencies.cmake  SetupBuildEnvironment.cmake
app/src/main/cpp/core/container/: ContainerManager.cpp  ContainerManager.h
app/src/main/cpp/core/hooks/: hook_manager.h
app/src/main/cpp/core/memory/: MemoryHelper.h  memory_manager.h
app/src/main/cpp/core/sdk/: MinimalSDK.cpp  MinimalSDK.h
app/src/main/cpp/core/security/: BearMundoSecurity.cpp  BearMundoSecurity.h
app/src/main/cpp/core/utils/: MapHelper.cpp  MapHelper.h  logger.h
app/src/main/cpp/security/: BearMundoSecurity.cpp  BearMundoSecurity.h  CMakeLists.txt  KeyAuthJNI.cpp  KeyAuthNative.cpp  KeyAuthNative.h  MemoryProtection.cpp  MemoryProtection.h  OffsetContainer.cpp  OffsetContainer.h  README.md  SecurityStateAnalyzer.cpp  SecurityStateAnalyzer.h
app/src/main/jni/anti_detection/: AntiDetection.h
app/src/main/jni/container/: ContainerManager.h
app/src/main/jni/stealth/: StealthOperations.h
app/src/main/res/layout/: activity_main.xml  activity_security_test.xml
app/src/main/res/values/: strings.xml  (+1 more)
buildSrc/: build.gradle  settings.gradle
docs/: AAR_CONVERSION_SUMMARY.md  AAR_INTEGRATION_ARCHITECTURE.md  AAR_INTEGRATION_GUIDE.md  CLEANUP_SUMMARY.md  DETAILED_README.md  GRADLE_FIXES_SUMMARY.md  IMPLEMENTATION_PATHS.md  INTEGRATION_RECOMMENDATIONS.md  MIGRATION_PLAN.md  PRACTICAL_INTEGRATION_GUIDE.md  PROJECT_MAP.md
docs/api/: README.md
docs/guides/: getting-started.md
frida-tools/: README.md  offset_finder.js  quick_hook.js  run_frida.bat  sdk_analyzer.js  setup_frida.bat  setup_frida.sh
frida-tools/scripts/: analyzer.js  bypass-signkill.js  bypass-ssl.js
frida-tools/tools/: frida_launcher.py
gradle/: libs.versions.toml
scripts/: GUIDE_SIGNKILL.md  README.md  README_SIGNKILL.md
scripts/setup/: enhanced-merge-script.ps1  merge-updates-script.ps1  merge-updates.ps1  setup-existing-repo.ps1  setup-github-repo.ps1
scripts/utils/: README.md  bypass-root.js  bypass-signkill_1.js  bypass-signkill_2.js  bypass-signkill_3.js  bypass-signkill_4.js  check_sdk.py  download-wrapper.ps1
(+46 files in other folders)
